src/ttyManifests/tty_02_Pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: tty-$SUB
    otomi: tty
  name: tty-$SUB
  namespace: $TARGET_TEAM
spec:
  serviceAccountName: tty-$SUB
  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault
    runAsUser: 1001
    runAsGroup: 1001
    fsGroup: 1001
  containers:
    - image: linode/apl-tty:1.2.6
      name: po
      resources:
        requests:
          memory: '128Mi'
          cpu: '250m'
        limits:
          memory: '256Mi'
          cpu: '500m'
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - ALL
---
