src/ttyManifests/tty_04_Svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tty-$SUB
  name: tty-$SUB
  namespace: $TARGET_TEAM
spec:
  ports:
    - name: 8080-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: tty-$SUB
  type: ClusterIP
---
