src/ttyManifests/tty_05_HttpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tty-$SUB
  namespace: $TARGET_TEAM
spec:
  hostnames:
    - tty.$FQDN
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: platform
      namespace: istio-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: tty-$SUB
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /$SUB
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /
---
