src/ttyManifests/tty_05_Vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: tty-$EMAIL
  namespace: team-admin
spec:
  gateways:
    - team-admin/team-admin-public-tlsterm
  hosts:
    - tty.$FQDN
  http:
    - match:
        - uri:
            prefix: /platform-logout
      redirect:
        authority: auth.$FQDN
        uri: /oauth2/sign_out?rd=https://keycloak.$FQDN/realms/otomi/protocol/openid-connect/logout?post_logout_redirect_uri=https://console.$FQDN
        redirectCode: 302
    - match:
        - uri:
            prefix: /$EMAIL
      rewrite:
        uri: /
      route:
        - destination:
            host: tty-$EMAIL.team-admin.svc.cluster.local
            port:
              number: 8080
          headers:
            request:
              set:
                X-Forwarded-Proto: https
---
